--- a/MsPacman/MsPacman.vcxproj.filters
+++ b/MsPacman/MsPacman.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="UIActivateCommand.h">
       <Filter>Header Files\Commands</Filter>
     </ClInclude>
+    <ClInclude Include="DimOverlayComponent.h">
+      <Filter>Header Files\Components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -145,6 +148,9 @@
     </ClCompile>
     <ClCompile Include="UIActivateCommand.cpp">
       <Filter>Source Files\Commands</Filter>
+    </ClCompile>
+    <ClCompile Include="DimOverlayComponent.cpp">
+      <Filter>Source Files\Components</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
