- Finished Implementing all ghosts - Implemented PowerUp - Added 1 extra map - Added new sounds - Added Collision - Added GhostManager

--- a/MsPacman/MsPacman.vcxproj
+++ b/MsPacman/MsPacman.vcxproj
@@ -169,19 +169,28 @@
     <ClInclude Include="DimOverlayComponent.h" />
     <ClInclude Include="FpsComponent.h" />
     <ClInclude Include="GainPointsCommand.h" />
+    <ClInclude Include="GameEvents.h" />
+    <ClInclude Include="GhostManagerComponent.h" />
+    <ClInclude Include="GhostSpriteAnimationComponent.h" />
+    <ClInclude Include="GhostState.h" />
     <ClInclude Include="IGhostChaseBehaviour.h" />
+    <ClInclude Include="InkyChaseBehaviour.h" />
     <ClInclude Include="LevelGridComponent.h" />
     <ClInclude Include="LivesComponent.h" />
     <ClInclude Include="LivesDisplayComponent.h" />
     <ClInclude Include="MenuState.h" />
     <ClInclude Include="MoveCommand.h" />
     <ClInclude Include="PausedState.h" />
+    <ClInclude Include="PinkyChaseBehaviour.h" />
     <ClInclude Include="PlayerMovementComponent.h" />
     <ClInclude Include="PlayingState.h" />
+    <ClInclude Include="PowerPelletComponent.h" />
     <ClInclude Include="RotatorComponent.h" />
     <ClInclude Include="ScoreComponent.h" />
     <ClInclude Include="ScoreDisplayComponent.h" />
+    <ClInclude Include="SetGoNextLevelCommand.h" />
     <ClInclude Include="SpriteAnimationComponent.h" />
+    <ClInclude Include="SueChaseBehaviour.h" />
     <ClInclude Include="ThrashTheCacheComponent.h" />
     <ClInclude Include="UIActivateCommand.h" />
     <ClInclude Include="UICommandBase.h" />
@@ -194,6 +203,9 @@
     <ClCompile Include="DimOverlayComponent.cpp" />
     <ClCompile Include="FpsComponent.cpp" />
     <ClCompile Include="GainPointsCommand.cpp" />
+    <ClCompile Include="GhostManagerComponent.cpp" />
+    <ClCompile Include="GhostSpriteAnimationComponent.cpp" />
+    <ClCompile Include="InkyChaseBehaviour.cpp" />
     <ClCompile Include="LevelGridComponent.cpp" />
     <ClCompile Include="LivesComponent.cpp" />
     <ClCompile Include="LivesDisplayComponent.cpp" />
@@ -201,12 +213,16 @@
     <ClCompile Include="MenuState.cpp" />
     <ClCompile Include="MoveCommand.cpp" />
     <ClCompile Include="PausedState.cpp" />
+    <ClCompile Include="PinkyChaseBehaviour.cpp" />
     <ClCompile Include="PlayerMovementComponent.cpp" />
     <ClCompile Include="PlayingState.cpp" />
+    <ClCompile Include="PowerPelletComponent.cpp" />
     <ClCompile Include="RotatorComponent.cpp" />
     <ClCompile Include="ScoreComponent.cpp" />
     <ClCompile Include="ScoreDisplayComponent.cpp" />
+    <ClCompile Include="SetGoNextLevelCommand.cpp" />
     <ClCompile Include="SpriteAnimationComponent.cpp" />
+    <ClCompile Include="SueChaseBehaviour.cpp" />
     <ClCompile Include="ThrashTheCacheComponent.cpp" />
     <ClCompile Include="UIActivateCommand.cpp" />
     <ClCompile Include="UICommandBase.cpp" />
