--- a/Minigin/Minigin.vcxproj
+++ b/Minigin/Minigin.vcxproj
@@ -203,6 +203,8 @@
     <ClInclude Include="..\3rdParty\Imgui\imstb_textedit.h" />
     <ClInclude Include="..\3rdParty\Imgui\imstb_truetype.h" />
     <ClInclude Include="BaseComponent.h" />
+    <ClInclude Include="ColliderComponent.h" />
+    <ClInclude Include="CollisionManager.h" />
     <ClInclude Include="Command.h" />
     <ClInclude Include="ControllerInput.h" />
     <ClInclude Include="Event.h" />
@@ -238,6 +240,8 @@
     <ClCompile Include="..\3rdParty\Imgui\imgui_plot.cpp" />
     <ClCompile Include="..\3rdParty\Imgui\imgui_tables.cpp" />
     <ClCompile Include="..\3rdParty\Imgui\imgui_widgets.cpp" />
+    <ClCompile Include="ColliderComponent.cpp" />
+    <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="Command.cpp" />
     <ClCompile Include="ControllerInput.cpp" />
     <ClCompile Include="Font.cpp" />
